kubernetes/personal/applications/today/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: today
  namespace: today
  labels:
    app: today

spec:
  replicas: 1

  selector:
    matchLabels:
      app: today
  template:
    metadata:
      labels:
        app: today
    spec:
      containers:
        - name: main

          image: agrrh/today:latest

          resources: {}
            # requests:
            #   cpu: "500m"
            #   memory: "512Mi"
            # limits:
            #   cpu: "500m"
            #   memory: "512Mi"

          ports:
            - name: http
              containerPort: 80
