kubernetes/personal/applications/today/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: today
  namespace: today
  labels:
    app: today

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: today
