kubernetes/personal/applications/today/ingress.yaml
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: today-http
  namespace: today

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`today.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: kube-system
      services:
        - kind: Service
          name: today
          namespace: today
          port: 80
